# wg-plumber

./: Cargo.toml  README.md  command_tree.d2
src/: delete_command.rs  main.rs  server.rs  set_command.rs  show_command.rs  wg_interface.rs
