[package]
name = "wg-plumber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = "1.27.0"
toml = "0.7.3"
